import React from 'react';
import { shallow } from 'enzyme';
import delay from 'delay';
import { testCases } from './copy-button-test-cases';
import getWindow from '../../utils/get-window';

const mockUserAgent =
  'Mozilla/5.0 (Macintosh; Intel Mac OS X 10_12_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.186 Safari/537.36';

jest.mock('clipboard/dist/clipboard.min.js', () => {
  class Clipboard {}
  Clipboard.isSupported = () => true;
  return Clipboard;
});
jest.mock('../../utils/get-window', () => {
  return jest.fn();
});

describe('CopyButton', () => {
  let testCase;
  let wrapper;

  beforeEach(() => {
    getWindow.mockReturnValue({
      navigator: {
        userAgent: mockUserAgent
      }
    });
  });

  describe(testCases.basic.description, () => {
    beforeEach(() => {
      testCase = testCases.basic;
      wrapper = shallow(
        React.createElement(testCase.component, testCase.props)
      );
    });

    test('renders', () => {
      expect(wrapper).toMatchSnapshot();
    });

    test('changes state on click', () => {
      wrapper
        .find('IconButton')
        .props()
        .onClick();
      wrapper.update();
      expect(wrapper).toMatchSnapshot();
      return delay(820).then(() => {
        wrapper.update();
        expect(wrapper).toMatchSnapshot();
      });
    });
  });

  describe(testCases.allProps.description, () => {
    beforeEach(() => {
      testCase = testCases.allProps;
      wrapper = shallow(
        React.createElement(testCase.component, testCase.props)
      );
    });

    test('renders', () => {
      expect(wrapper).toMatchSnapshot();
    });

    // Extra classes need to carry over to both states
    test('changes state on click', () => {
      wrapper
        .find('IconButton')
        .props()
        .onClick();
      wrapper.update();
      expect(wrapper).toMatchSnapshot();
      return delay(820).then(() => {
        wrapper.update();
        expect(wrapper).toMatchSnapshot();
      });
    });

    test('calls onCopy callback', () => {
      wrapper
        .find('IconButton')
        .props()
        .onClick();
      expect(testCase.props.onCopy).toHaveBeenCalledTimes(1);
      expect(testCase.props.onCopy).toHaveBeenCalledWith(testCase.props.text);
    });
  });
});
